--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %} 
 
+{% load static %}
+
+{% block 'head' %}
+ <link rel="stylesheet" href="{% static 'usuarios/css/usuarios.css' %}">
+{% endblock 'head' %}
+
 {% block 'body' %}
 
 <div class="container-fluid">
@@ -9,7 +15,7 @@
         <br>
         <br>
         <section class="cont-logo">
-          <img class="logo" src="#">
+          <img class="logo" src="{% static 'geral/img/logo.png' %}">
           <label class="text-logo">HEALING</label>
         </section>
         <hr>
@@ -40,7 +46,7 @@
       </div>
     </div>
     <div class="col-md bg-main d-flex justify-content-center align-items-center">
-      <img src="#" alt="">
+      <img src="{% static 'usuarios/img/ilustracao.png' %}" alt="">
     </div>
   </div>
 </div>
