tela de cadastro finalizada

--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -20,9 +20,18 @@
         </section>
         <hr>
 
-        <form action="" method="post">
+        <form action=" {% url "cadastro" %} " method="POST"> {% csrf_token %}
           <h2 class="fonte-destaque1">Cadastre-se</h2>
-          <br>
+          {% if messages %}
+              <br>
+              {% for message in messages %}
+                  <section class="alert {{message.tags}}">
+                    {{message}}
+
+                  </section>
+              {% endfor %}
+          {% endif %}
+          
           <label for="">Username</label>
           <input type="text" name="username" id="" class="form-control" placeholder="Username ...">
           <br>
